--- a/b1s2.md
+++ b/b1s2.md
@@ -8,7 +8,9 @@
 - Aplicar conocimientos básicos sobre funciones
 - Transformar funciones a funciones sin nombre y asignarlos a variables
 - Usar algunas funciones de la clase Range
-
+### INTEGRANTES:
+Diana Bermeo
+Kevin Narvaez
 ### Descripción:
 
 En este taller debe realizar algunos ejercicios los mismos que buscan que ponga en práctica lo aprendido en las horas de clases en donde estudió los temas: funciones, funciones sin nombre y rangos. 
@@ -27,28 +29,52 @@ def countWithoutOpenVowels(word : String) : Int = {
 Responda a las siguientes preguntas:
 
    * ¿Es una función con nombre?
+   Si
    * ¿Cuántos parámetros recibe la función?
+    1
    * ¿Cuál o cuáles son los tipos de datos de el o de los parámetros que recibe la función?
+   String
    * ¿Cuál es el tipo de dato que devuelve la función?
+   INT
    * ¿El uso de las llaves es necesario? (Demuestren su respuesta)
+   RESPUESTA: No es necesario porque con o sin el uso de las llaves generan la misma respuesta:
+   def countWithoutOpenVowels(word : String) : Int = { 
+   word.toLowerCase.replaceAll("a", "").replaceAll("e", "").replaceAll("o", "").length
+    }
+    countWithoutOpenVowels("Hola")
+    def countWithoutOpenVowels(word : String) : Int = word.toLowerCase.replaceAll("a", "").replaceAll("e", "").replaceAll("o", "").length
+    countWithoutOpenVowels("Hola")
+
    * Qué salida genera la función si se invoca con los siguientes valores:
-	   - Loja
-	   - Universidad
-	   - Particular
+	   - Loja GENERA el entero 2
+	   - Universidad GENERA el entero 3
+	   - Particular GENERA el entero 4
 
 
 2. Modifiquen la función anterior para que ahora devuelva el texto que recibe como párametro, pero sin los vocales cerradas (i y u)
+def countWithoutOpenVowels(word : String) : String = word.toLowerCase.replaceAll("i", "").replaceAll("u", "")
 
 3. Transformen a las funciones de los puntos 1 y 2 en funciones sin nombre.
+val func1 = (word : String) => (word.toLowerCase.replaceAll("a", "").replaceAll("e", "").replaceAll("o", "").length)
+val func2 = (word : String) => (word.toLowerCase.replaceAll("i", "").replaceAll("u", ""))
 
 4. Ejecuten cada una de las funciones sin nombre del punto 3 con los parámetros que se listan en el punto 1 y literal f.
-
+func1("Loja")
+func1("Universidad")
+func1("Particular")
+func2("Loja")
+func2("Universidad")
+func2("Particular")
 5. Usando como base el código del punto 1, tratem de crear una función sin nombre que reciba como párametros el texto y una letra que se desea omitir (reemplazar por vacío) y que devuelve la longitud del nuevo texto.
-
+val texto = (word : String , letra: String)  => ( word.toLowerCase.replaceAll(letra, "").length)
+texto("Diana","a")
 6. Modifiquen su código del punto 5 para que esta vez devuelve _true_ si la longitud del texto (valor devuelto en función anterior) es par, caso contrario devuelva _false_.
-
+val texto2 = (word : String , letra: String)  => ( word.toLowerCase.replaceAll(letra, "").length%2==0)
+texto2("Diana","a")
 7. Si recuerdan, en la actividad de práctica y experimentación de la semana pasada (ver archivo [b1s1.md](b1s1.md)) se usaron varias funciones, liste aquellas funciones (escritas en _Scala_) que reciben como parámetro a otra función sin nombre.
-
+nums.map(n => (n, n * n))
+nums.filter(n => n % 2 == 0)
+nums.reduce((n1, n2) => n1 * n2)
 8. Cuando se tiene un rango de datos o una lista de valores, existe un método que se llama _max_ que devuelve el mayor de los valores, así como se muestra en el siguiente código de ejemplo:
 
 ```scala
@@ -58,7 +84,6 @@ val words = List("Universidad", "Técnica", "Particular", "de", "Loja")
 words.max
 
 ```
-
 Como de seguro se percató, se usa el orden natural del rango o lista de datos, es decir ascendente. Pero, si se quiere modificar ese criterio de ordenamiento, por ejemplo, en el caso de lista de palabras, que en lugar de usar el orden alfabético se use como criterio la longitud de cada palabra. Para esos casos se usará _maxBy_, como se muestra en el siguiente código:
 
 
@@ -77,10 +102,14 @@ val estudiantes = List(Estudiante("Daniel", 21), Estudiante("Janneth", 23), Estu
 Con base al código anterior, trabaje en los siguientes puntos:
 
    * ¿Qué sucede si ejecuta la siguiente sentencia? _estudiantes.max_
+   *Da un error porque max usa el orden natural del rango o lista de datos, es decir ascendente.
    * ¿Qué sucede si ejecuta la siguiente sentencia? _estudiantes.maxBy(e => e.edad)_
+   Se ejecuta correctamente.
    * Reemplace la función sin nombre que se encuentra en el punto anterior, por una función con nombre definida usando la palabra _def_ y todos los elementos que esto implica.
+   * 
 
-
+def funcion( x : Estudiante): Int  = x.edad
+estudiantes.maxBy(e => funcion(e))
 ### Calificación:
 
 La tarea se completa cuando usted cargue ambos archivos en: https://classroom.github.com/a/3XRT677A
